--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>NANI'S CAPSTONE-TECH-M</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://firebasestorage.googleapis.com/v0/b/naniportfolio-cadd2.appspot.com/o/favicon.ico?alt=media&token=003cc3a8-49dc-4ea0-9de1-f7b6ec6f5fe5"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
